more info content image width fix #48
On narrow screens (e.g. iPhone 5), images were overlapping the edge

--- a/css/styles.css
+++ b/css/styles.css
@@ -753,6 +753,7 @@
 	.instructions-content img{
 		display: block;
 		margin: 0 auto;
+		max-width: 100%;
 	}
 	.instructions-content h2{
 		text-align: center;
